<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="contactos">CONTACTOS</string>
     <string name="sobre">SOBRE</string>
    <string name="description">Image Content Description</string>
    <string name="materiais">Materiais:</string>
    <string name="data">Data:</string>
    <string name="Date">Data</string>
    <string name="fabricante">Fabricante:</string>
    <string name="pais">Pais:</string>
    <string name="cor">Cor:</string>
    <string name="designer">Designer:</string>
    <string name="Designer">Designer</string>
    <string name="tipo">Tipo:</string>
	<string name="categoria">Categoria:</string>
    <string name="Categoria">Category</string>
    <string name="app_name">MUDE</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
 	<string name="twitter_callback">http://www.elmeble.pl</string>
    <string name="twitter_consumer_key">k5g5MV57D9cxaKHXEGHg0BAYC</string>
    <string name="twitter_consumer_secret">xTK3ortQpWCFAMLhzhjhsuGQTsuQ5C09AWpMPvhOTQ1aGpGA3P</string>
    <string name="twitter_oauth_verifier">oauth_verifier</string>
    <string name="facebook_app_id">1532526940335103</string>
</resources>
